--- a/public/css/paper.css
+++ b/public/css/paper.css
@@ -91,6 +91,10 @@
 	margin-top: 3px;
 }
 
+.question_select option{
+	display:inline-block;
+}
+
 .question_left{
 	font-weight: bold;
 	float: left;
