--- a/public/css/common.css
+++ b/public/css/common.css
@@ -6,7 +6,7 @@ table{border-collapse:collapse;cellpadding:0; cellspacing:0;}
 textarea:focus{ outline:none}
 h1,h2,h3,h4,h5,h6{font-size:100%; }
 html{ height:auto;  }
-img{border:0; vertical-align:top;}
+img{border:0; vertical-align:middle;}
 a{text-decoration:none; color:#222222;}
 a:focus,input{outline:none}
 ul {list-style: none;}
